--- a/apps/entry/index.html
+++ b/apps/entry/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>First20240511</title>
+    <title>Entry</title>
     <base href="/" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
